feat: command line model generator